[package]
name = "serde_result_line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
itertools = "0.11.0"
itoa = "1.0.9"
nom = "7.1.3"
ryu = "1.0.15"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
